# TFIDF-Streaming

./: CMakeLists.txt  IFIDFCalculator.cpp  IFIDFCalculator.h  MusicStreamProcessor.cpp  MusicStreamProcessor.h  NetworkManager.cpp  NetworkManager.h  PerformaceMonitor.cpp  PerformaceMonitor.h  Song.cpp  Song.h  SongDatabase.cpp  SongDatabase.h  StorageManager.cpp  StorageManager.h  TextPreProcessor.cpp  TextPreProcessor.h  client.cpp  conandata.yml  main.cpp  vcpkg.json
TFIDF_Streaming/: add_song.bru  bruno.json
